--- a/media/images/activities/test.html
+++ b/media/images/activities/test.html
@@ -2,35 +2,29 @@
 <html>
 <head>
 <style>
-.activity-list {
-
-}
-
-.activity-list .activity-box {
-
-}
-
-.activity-list .activity-box .activity {
-
-}
-
-.activity-list .activity-box .activity .activity-image{
-    width: 50%;
-    max-height: 10%;
-}
+    .item {
+        border: 1px solid black;
+        display: block;
+        margin: 0 10px;
+        float: left;
+    }
+    .text {
+        clear: left;
+    }
 </style>
 </head>
 <body>
-<div class="activity-list">
-    <div class="activity-box">
-        <div class="activity" id="1">
-            <img src="singen.jpg" class="activity-image">
+<div class="container">
+    <div class="h-list">
+        <div class="item">
+            Hi
+        </div>
+        <div class="item">
+            Hi
         </div>
     </div>
-    <div class="activity-box">
-        <div class="activity" id="1">
-            <img src="bass.jpg" class="activity-image">
-        </div>
+    <div class="text">
+        Hallo!
     </div>
 </div>
 </body>
