--- a/media/images/activities/test.html
+++ b/media/images/activities/test.html
@@ -2,30 +2,10 @@
 <html>
 <head>
 <style>
-    .item {
-        border: 1px solid black;
-        display: block;
-        margin: 0 10px;
-        float: left;
-    }
-    .text {
-        clear: left;
-    }
+    
 </style>
 </head>
 <body>
-<div class="container">
-    <div class="h-list">
-        <div class="item">
-            Hi
-        </div>
-        <div class="item">
-            Hi
-        </div>
-    </div>
-    <div class="text">
-        Hallo!
-    </div>
-</div>
+    <div
 </body>
 </html>
